fixing the scroll overlap on the profile page

--- a/client/src/pages/styles/profile.css
+++ b/client/src/pages/styles/profile.css
@@ -17,6 +17,7 @@
   align-items: center;
   margin: 0 auto;
   max-width: 80%;
+  margin-bottom: 150px;
 
 }
 
@@ -65,7 +66,7 @@
 
 
 #root > div > div > div.div-2 > div > div.deleteAccountbtn {
-  position: fixed;
+  /* position: fixed; */
   bottom: 160px;
   display: flex;
   justify-content: center;
